# grid-benchmark

./: .gitignore  Benchmark_Grid.cpp  Benchmark_IO.cpp  Makefile.am  Readme.md  bootstrap-env.sh  bootstrap.sh  build-benchmark.sh  build-grid.sh  configure.ac  env-base.sh  env-pixi.sh  env.sh  pixi.toml  test.sh
instantiation/: SU4.cpp  SU4.hpp  instantiations.hpp
instantiation/SU4/: Cayley5DD.cpp  Cayley5DF.cpp  SU4.hpp  Wilson5DD.cpp  Wilson5DF.cpp  WilsonD.cpp  WilsonF.cpp
results/daint/benchmark-grid-1.1884843/: end-date  ldd  log  nodes  result.json  start-date  telemetry.db
results/daint/benchmark-grid-1.1893731/: end-date  telemetry.db
results/daint/benchmark-grid-16.1884756/: ldd  nodes  script  start-date
results/daint/benchmark-grid-2.1893725/: end-date  nodes  result.json  telemetry.db
results/daint/benchmark-grid-32.1884757/: app-hash  end-date  ldd  nodes
results/daint/benchmark-grid-4.1893726/: result.json
results/daint/benchmark-grid-64.1884848/: ldd  nodes  result.json
results/daint/benchmark-grid-8.1884850/: log  nodes  result.json  start-date  telemetry.db
results/lumi/benchmark-grid-1.14282004/: end-date  log  result.json  script  start-date  telemetry.db
results/lumi/benchmark-grid-16.14105383/: end-date  nodes  start-date  telemetry.db
results/lumi/benchmark-grid-2.14281814/: result.json  script  telemetry.db
systems/apple-silicon/: grid-config.json
systems/daint/: grid-config.json
systems/linux-x64/: grid-config.json
systems/lumi/: grid-config.json
systems/tursa/: grid-config.json  spack-bootstrap.sh
(+102 files in other folders)
