ACLOCAL_AMFLAGS = -I .buildutils/m4
 
bin_PROGRAMS =                \
  Benchmark_Grid              \
  Benchmark_IO

Benchmark_Grid_SOURCES              = Benchmark_Grid.cpp\
                                      instantiation/SU4/WilsonF.cpp\
                                      instantiation/SU4/WilsonD.cpp\
                                      instantiation/SU4/Wilson5DF.cpp\
                                      instantiation/SU4/Wilson5DD.cpp\
                                      instantiation/SU4/Cayley5DF.cpp\
                                      instantiation/SU4/Cayley5DD.cpp
Benchmark_IO_SOURCES                = Benchmark_IO.cpp
